--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,42 @@
-<h2>Desafio Votacao</h2>
+<h2>Vote here</h2>
+
+<br/>
+
+<div class="list-group">
+    <label class="list-group-item">
+      <input class="form-check-input me-1" type="radio" value="">
+      Good
+    </label>
+    <label class="list-group-item">
+      <input class="form-check-input me-1" type="radio" value="">
+      Great
+    </label>
+    <label class="list-group-item">
+      <input class="form-check-input me-1" type="radio" value="">
+      Very nice
+    </label>
+  </div>
+<br/>
+
+<button id="btn1" name="subject" class="btn btn-primary" type="submit">Vote</button> 
+
+<br/>
+<br/>
+<br/>
+
+<label>Visualize votes, click here:</label>
+
+<br/>
+<br/>
+
+<p>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" 
+    data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      View votes here
+    </button>   
+  </p>
+  <div class="collapse" id="collapseExample">
+    <div class="card card-body">
+      [1] - Good ->  cont [2] - Great ->  cont [3] - Very nice -> cont
+    </div>
+  </div>
