Eventos de clique, modal test, faltando incrementar usuarios

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -3,17 +3,12 @@
         <div class="col-md-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <span class="glyphicon glyphicon-list"></span>Sortable Lists
+                    <span class="glyphicon glyphicon-list"></span>Users
                     <div class="pull-right action-buttons">
                         <div class="btn-group pull-right">
-                            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-cog" style="margin-right: 0px;"></span>
+                            <button type="button" class="btn btn-default btn-xs dropdown-toggle" (click)="onEnterUsers()">
+                                <span class="glyphicon glyphicon-user" style="margin-right: 0px;"></span>
                             </button>
-                            <ul class="dropdown-menu slidedown">
-                                <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-pencil"></span>Edit</a></li>
-                                <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-trash"></span>Delete</a></li>
-                                <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-flag"></span>Flag</a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -26,11 +21,6 @@
                                     Option 1
                                 </label>
                             </div>
-                            <div class="pull-right action-buttons">
-                                <a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-pencil"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="trash"><span class="glyphicon glyphicon-trash"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="flag"><span class="glyphicon glyphicon-flag"></span></a>
-                            </div>
                         </li>
                         <li class="list-group-item">
                             <div class="checkbox">
@@ -38,11 +28,6 @@
                                 <label for="checkbox2">
                                     Option 2
                                 </label>
-                            </div>
-                           <div class="pull-right action-buttons">
-                                <a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-pencil"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="trash"><span class="glyphicon glyphicon-trash"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="flag"><span class="glyphicon glyphicon-flag"></span></a>
                             </div>
                         </li>
                         <li class="list-group-item">
@@ -52,11 +37,6 @@
                                     Option 3
                                 </label>
                             </div>
-                            <div class="pull-right action-buttons">
-                                <a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-pencil"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="trash"><span class="glyphicon glyphicon-trash"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="flag"><span class="glyphicon glyphicon-flag"></span></a>
-                            </div>
                         </li>
                         <li class="list-group-item">
                             <div class="checkbox">
@@ -64,11 +44,6 @@
                                 <label for="checkbox4">
                                     Option 4
                                 </label>
-                            </div>
-                            <div class="pull-right action-buttons">
-                                <a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-pencil"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="trash"><span class="glyphicon glyphicon-trash"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="flag"><span class="glyphicon glyphicon-flag"></span></a>
                             </div>
                         </li>
                         <li class="list-group-item">
@@ -78,19 +53,13 @@
                                     Option 5
                                 </label>
                             </div>
-                           <div class="pull-right action-buttons">
-                                <a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-pencil"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="trash"><span class="glyphicon glyphicon-trash"></span></a>
-                                <a href="http://www.jquery2dotnet.com" class="flag"><span class="glyphicon glyphicon-flag"></span></a>
-                            </div>
                         </li>
                     </ul>
                 </div>
                 <div class="panel-footer">
                     <div class="row">
                         <div class="col-md-6">
-                            <h6>
-                                Total Options <span class="label label-info">5</span></h6>
+                            <h6> Total Options <span class="label label-info">5</span></h6>
                         </div>
                     </div>
                 </div>
@@ -101,4 +70,8 @@
       <button class="btn btn-primary" type="button" (click)="onSubmitEnter()">
         Submit
       </button>   
-  </p>
+    </p>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ExemploModalCentralizado">
+            Abrir modal de demonstração
+          </button>
+</div>
