--- a/src/app/send-options/send-options.component.html
+++ b/src/app/send-options/send-options.component.html
@@ -1,5 +1,5 @@
 <p>
-    <button class="btn btn-primary" type="button" (click)="onSubmitEnter()">
+    <button id="btnSendOptions" class="btn btn-primary" type="button" (click)="sendOptions()">
         Submit
     </button>
 </p>
