--- a/src/app/view-options/view-options.component.html
+++ b/src/app/view-options/view-options.component.html
@@ -5,8 +5,8 @@
         View votes here
     </button>
 </p>
-<div class="collapse" id="collapseVotes" *ngFor="let votes of votes">
+<div class="collapse" id="collapseVotes" *ngFor="let viewOptions of viewOptions">
     <div class="card card-body">
-        {{ votes }}
+        {{ viewOptions }}
     </div>
 </div>
