--- a/src/app/view-options/view-options.component.html
+++ b/src/app/view-options/view-options.component.html
@@ -6,7 +6,17 @@
     </button>
 </p>
 <div class="collapse" id="collapseVotes" *ngFor="let viewOptions of viewOptions">
-    <div class="card card-body">
-        {{ viewOptions }}
+    <div class="container">
+        <div class="col-md-6">
+            <div class="panel panel-primary">
+                <div class="panel-body">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            {{ getViewOptions() }}
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
